--- a/application-dev.yml
+++ b/application-dev.yml
@@ -13,13 +13,13 @@ spring:
     proxy-target-class: true
     auto: true
   rabbitmq:
-    host: paascloud-mq-rabbit
+    host: 192.168.133.132
     port: 5672
     username: guest
     password: guest
   redis:
-    host: paascloud-db-redis
-    password: paascloud@redis
+    host: localhost
+    password: SPT888spt
     port: 6379
     timeout: 0
   datasource:
@@ -41,7 +41,7 @@ spring:
   mail:
     host: smtp.163.com
     username: paascloudTest@163.com
-    password: a123456
+    password: a1234567
     port: 465
     protocol: smtp
     test-connection: false
