--- a/application-dev.yml
+++ b/application-dev.yml
@@ -18,7 +18,7 @@ spring:
     username: guest
     password: guest
   redis:
-    host: localhost
+    host: paascloud-db-redis
     password: SPT888spt
     port: 6379
     timeout: 0
