--- a/application-dev.yml
+++ b/application-dev.yml
@@ -13,12 +13,12 @@ spring:
     proxy-target-class: true
     auto: true
   rabbitmq:
-    host: 192.168.133.132
+    host: paascloud-mq-rabbit
     port: 5672
-    username: guest
-    password: guest
+    username: admin
+    password: cxy888
   redis:
-    host: 127.0.0.1
+    host: paascloud-db-redis
     password: SPT888spt
     port: 6379
     timeout: 0
@@ -41,7 +41,7 @@ spring:
   mail:
     host: smtp.163.com
     username: paascloudTest@163.com
-    password: a1234567
+    password: a123456333333
     port: 465
     protocol: smtp
     test-connection: false
